Added Fax entry for the sender.

--- a/Brief.tex
+++ b/Brief.tex
@@ -9,6 +9,7 @@
 \ABSOrt{Absenderort}
 \ABSPhone{+49~123~123456789}
 \ABSMobile{+49~123~123456789}
+\ABSFax{+49~123~123456789}
 \ABSMail{absender@provider.url}
 \ABSInfo{Zusätzliche Informationen über den Absender}
 % Adressfeld
