Added development goals.

--- a/Brief.tex
+++ b/Brief.tex
@@ -42,6 +42,11 @@
 	\begin{itemize}
 		\item Strich in Adressfeld genau so lang, wie längster Eintrag
 		\item Location Absenderinfos configurable
+		\item Randeinstellungen konfigurabel und dokumentieren
+		\item Sämtliches Styling in eine separate Datei (muss dem Nutzer nicht aufgezwungen werden)
+		\item Sämtliche Funktionalität in ein Paket $\to$ nutzbar in anderen Dokumenten, mehrere Briefe in einem Dokument
+		\item Klasse als dünnen Wrapper mit Standardeinstellungen um dieses Paket, stellt Pakete ein mit sonst nix
+		\item Briefpapier konfigurabel: Erste Seite, Rechte Seite, Linke Seite
 	\end{itemize}
 	
 	\Gruss{mit freundlichem Gruß}
