--- a/brbrief.dtx
+++ b/brbrief.dtx
@@ -453,7 +453,11 @@ Running "make install" installs the files in the local TeX tree.
 % Wenn \verb|a| definiert ist und non-whitespace Elemente enthält, wird \verb|b| gedruckt, ansonsten (leer) \verb|c|.
 %    \begin{macrocode}
 \newcommand{\PrintIfDefined}[3]{%
-    \setbox0=\hbox{\foreverunspace#1\foreverunspace}\ifdim\wd0=0pt#3\else{#2}\fi%
+    \def\@testgegenstand{#1}%
+    \def\@jaoption{#2}%
+    \def\@neinoption{#3}%
+    \setbox0=\hbox{\foreverunspace\@testgegenstand\foreverunspace}%
+    \ifdim\wd0=0pt\@neinoption\else\@jaoption\fi%
 }%
 %    \end{macrocode}
 % \DescribeMacro{\PrintOptionalField}
@@ -467,31 +471,31 @@ Running "make install" installs the files in the local TeX tree.
 % Dieser Befehlt setzt den Briefkopf.
 %    \begin{macrocode}
 \newcommand{\kopfbereich}{%
-	\begin{minipage}[t][\anschriftpos][t]{\textwidth}
-		\mbox{}\@Briefkopf
-	\end{minipage}
+    \begin{minipage}[t][\anschriftpos][t]{\textwidth}
+        \mbox{}\@Briefkopf
+    \end{minipage}
 }
 %    \end{macrocode}
 % \DescribeMacro{\PrintSignatur}
 % Signatur ausgeben oder Platz für manuelle Unterschrift lassen.
 %    \begin{macrocode}
 \newcommand{\PrintSignatur}[1][3.5cm]{{%
-		\def\@brempty{}%
-		\ifx\@Signatur\@brempty%
-		\par
-		\else%
-		\IfFileExists{\@Signatur}{%
-			\begin{minipage}{#1}%
-				\centering%
-				\includegraphics[width=#1]{\@Signatur}%
-			\end{minipage}\\[-8pt]%
-		}{\ClassError{\jobname}{%
-				File "\@Signatur" was not found. %
-				Did you specify the correct filename in \string\Singatur{}?}{}%
-		}%
-		\fi
-		\rule{#1}{0.5pt}\\
-		\@ABSName
+        \def\@brempty{}%
+        \ifx\@Signatur\@brempty%
+        \par
+        \else%
+        \IfFileExists{\@Signatur}{%
+            \begin{minipage}{#1}%
+                \centering%
+                \includegraphics[width=#1]{\@Signatur}%
+            \end{minipage}\\[-8pt]%
+        }{\ClassError{\jobname}{%
+                File "\@Signatur" was not found. %
+                Did you specify the correct filename in \string\Singatur{}?}{}%
+        }%
+        \fi
+        \rule{#1}{0.5pt}\\
+        \@ABSName
 }}
 %    \end{macrocode}
 % Symbole für die Kontaktdaten des Absenders.
