Small docu fix.

--- a/brbrief.dtx
+++ b/brbrief.dtx
@@ -252,7 +252,7 @@ Running "make install" installs the files in the local TeX tree.
 % \DescribeMacro{\Gruss} \oarg{width}\marg{Grußfloskel} Beendet den Brief mit der Grußfloskel, Unterschrift und dem Namen des Absenders.
 % Das optionale Argument \oarg{width} gibt die Breite (Standard \SI{3.5}{\centi\meter}) der Unterschrift und des Unterschriftsstrich an.
 %
-% \subsection{Beispiel}
+% \section{Beispiel}
 % Nachfolgend ist die Quelldatei und Ergebnis eines Beispielbriefs aufgeführt.
 % \verbatiminput{Brief}
 % \includepdf{Brief}
